infra/k8s/base/common/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kmp-services
  labels:
    istio-injection: enabled
    monitoring: enabled
